<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <item
        android:id="@+id/home_fragment"
        android:icon="@drawable/ic_taxi_home"
        android:iconTint="@color/black"
        android:title="@string/title_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/history_fragment"
        android:icon="@drawable/ic_order"
        android:iconTint="@color/black"
        android:title="@string/title_history"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/product_fragment"
        android:icon="@drawable/ic_order"
        android:iconTint="@color/black"
        android:title="@string/title_product"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/myaccount_fragment"
        android:icon="@drawable/account"
        android:iconTint="@color/black"
        android:title="@string/title_account"
        app:showAsAction="ifRoom" />

</menu>