<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="selectCuisine"
            type="com.watirna.shop.views.selectcuisine.SelectCuisineViewModel" />
        <variable
            name="selectCuisineAdapter"
            type="com.watirna.shop.views.adapters.CuisineListAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F7F9F8"

        tools:context="com.watirna.shop.views.selectcuisine.SelectCuisine">

        <include
            android:id="@+id/selectCuisineToolbar"
            layout="@layout/toolbar_main"></include>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_margin="@dimen/_5sdp"
            android:id="@+id/rvCuisineList"
            android:adapter="@{selectCuisineAdapter}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            app:layout_constraintTop_toBottomOf="@+id/selectCuisineToolbar"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/txtNorthIndian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/avenirltstd_medium"
                android:text="@={selectCuisine.northIndian_Foods}"
                android:textColor="@color/black"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/northindian">

            </TextView>


            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radNorth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorBlack"
                android:scaleX="1"
                android:scaleY="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/txtNorthIndian"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.appcompat.widget.AppCompatRadioButton>

            <TextView
                android:id="@+id/txtSouthIndian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/avenirltstd_medium"
                android:text="@={selectCuisine.southIndian_Foods}"
                android:textColor="@color/black"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtNorthIndian"
                tools:text="@string/southindian">

            </TextView>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radSouth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorBlack"
                android:scaleX="1"
                android:scaleY="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/txtSouthIndian"
                app:layout_constraintTop_toBottomOf="@+id/radNorth">

            </androidx.appcompat.widget.AppCompatRadioButton>


            <TextView
                android:id="@+id/txtAmerican"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/avenirltstd_medium"
                android:text="@={selectCuisine.american_Foods}"
                android:textColor="@color/black"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtSouthIndian"
                tools:text="@string/american">

            </TextView>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radAmerican"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorBlack"
                android:scaleX="1"
                android:scaleY="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/txtAmerican"
                app:layout_constraintTop_toBottomOf="@+id/radSouth">

            </androidx.appcompat.widget.AppCompatRadioButton>


            <TextView
                android:id="@+id/txtArabian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/avenirltstd_medium"
                android:text="@={selectCuisine.arabian_Foods}"
                android:textColor="@color/black"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtAmerican"
                tools:text="@string/arabian">

            </TextView>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radArabian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorBlack"
                android:scaleX="1"
                android:scaleY="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/txtArabian"
                app:layout_constraintTop_toBottomOf="@+id/radAmerican">

            </androidx.appcompat.widget.AppCompatRadioButton>

            <TextView
                android:id="@+id/txtBakers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/avenirltstd_medium"
                android:text="@={selectCuisine.bakers}"
                android:textColor="@color/black"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtArabian"
                tools:text="@string/bakers">

            </TextView>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radBakers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorBlack"
                android:scaleX="1"
                android:scaleY="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/txtBakers"
                app:layout_constraintTop_toBottomOf="@+id/radArabian">

            </androidx.appcompat.widget.AppCompatRadioButton>

            <TextView
                android:id="@+id/txtAsian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/avenirltstd_medium"
                android:text="@={selectCuisine.asian}"
                android:textColor="@color/black"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtBakers"
                tools:text="@string/asian">

            </TextView>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radAsian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorBlack"
                android:scaleX="1"
                android:scaleY="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/txtAsian"
                app:layout_constraintTop_toBottomOf="@+id/radBakers">

            </androidx.appcompat.widget.AppCompatRadioButton>

            <TextView
                android:id="@+id/txtAfrican"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/avenirltstd_medium"
                android:text="@={selectCuisine.african_Foods}"
                android:textColor="@color/black"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtAsian"
                tools:text="@string/african">

            </TextView>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radAfrican"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorBlack"
                android:scaleX="1"
                android:scaleY="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/txtAfrican"
                app:layout_constraintTop_toBottomOf="@+id/radAsian">

            </androidx.appcompat.widget.AppCompatRadioButton>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/butSave"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/capsule_button"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

