<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="acceptOrderViewModel"
            type="com.watirna.shop.views.accept.AcceptOrderViewModel" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        android:elevation="@dimen/_3sdp"
        app:cardElevation="@dimen/_3sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/avenirltstd_medium"
                android:text="@string/order_preparation_title"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <EditText
                android:id="@+id/edt_amount"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/bg_toll_square"
                android:fontFamily="@font/avenirltstd_medium"
                android:gravity="center|start"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:padding="@dimen/_9sdp"
                android:singleLine="true"
                android:text="@={acceptOrderViewModel.prePareTime}"
                android:textSize="@dimen/_10sdp" />

            <LinearLayout
                android:id="@+id/llt_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginRight="-20dp"
                android:layout_marginLeft="-20dp"
                android:background="@drawable/bg_toll_confirm"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvOrderCancel"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="@{() -> acceptOrderViewModel.cancelOrder()}"
                    android:padding="5dp"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/tvOrderAccpet"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="@{() -> acceptOrderViewModel.acceptorder()}"
                    android:padding="5dp"
                    android:text="@string/Ok"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</layout>